--- a/SymPy_Tutorial_Part1.ipynb
+++ b/SymPy_Tutorial_Part1.ipynb
@@ -61,7 +61,7 @@
    "id": "144fe0a8-5e0d-4bf5-a15b-bbe88aa9ae94",
    "metadata": {},
    "source": [
-    "Using sympy can make things like square roots look prettier. For example, the first example below simply evaluates the square root of 2 and return a numeric value. In the second example, we use the sympy form of the square root function, and so python displays the value symbolically instead."
+    "Using sympy can make things like square roots look prettier. For example, the first example below simply evaluates the square root of 2 and return a numeric value. In the second example, we use the sympy form of the square root function, and so Python displays the value symbolically instead."
    ]
   },
   {
